--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,3 +1,55 @@
 @charset "UTF-8"
-/*paleta de cores*/
+/*paleta de cores
+black e white;
+#7400b8 Violeta - francesa
+#6930c3 Roxo - grape (uva)
+#5e60ce Ardósia - Azul
+#5390d9 Azul see more
+#4ea8de picton - Blue
+#48bfe3 Azul - aero 
+#64dfdf tiffany Blue
+#56cfe1 Azul - celeste
+#72efdd Turquesa
+#80ffdb Água-marinha
+*/
 *{}
+*{
+    font-family: sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #6930c3;
+    height: 100vh;
+    width: 100vw;
+}
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login {
+       position: absolute;
+       top: 50%;
+       left: 50%;
+        transform: translate(-50% -50%);
+
+      background-color: white;
+      width: 250px;
+      height: 500px;
+      border-radius: 20px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.452);
+}
+section#login > div#imagem {
+    display: block;
+    background: #6930c3 url(../imagens/pexels-mehmet-turgut-kirkgoz-16842044.jpg) no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+    height: 200px;
+}
+section#logi > div#formulario {
+    display: block;
+    padding: 10px;
+}
