--- a/estilo/style.css
+++ b/estilo/style.css
@@ -38,9 +38,12 @@ section#login {
 
       background-color: white;
       width: 250px;
-      height: 500px;
+      height: 515px;
       border-radius: 20px;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.452);
+
+      transition: width 0.3s, height 0.3s;
+      transition-timing-function: ease;
 }
 section#login > div#imagem {
     display: block;
@@ -49,7 +52,56 @@ section#login > div#imagem {
     background-position: center bottom;
     height: 200px;
 }
-section#logi > div#formulario {
+section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+div#formulario > h1 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+div#formulario > p {
+    font-size: 0.9em;
+}
+div.campo > label {
+    display: none;
+}
+form > div.campo {
+    background-color: #420068;
+    width: 100%;
+    height: 40px;
+    display: block;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+.entrar {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #c9d6d4;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+.entrar:hover {
+    background-color: #4ea8de;
+    cursor: pointer;
+}
+a.botao {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    padding-top: 7px;
+    background-color: #479186;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+a.botao:hover {
+   background-color: #80ffdb;
 }
