projeto login edição

--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -2,11 +2,12 @@
 /*Typical Device Breakpoint*/
 *{}
 @media  screen and (min-width: 768px) and (max-width: 992px) {
-    body {
+    body { /*para tablet*/
         background-image: linear-gradient(to top #7c5ece, #4ea8de);
     }
     section#login {
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -18,12 +19,13 @@
         float: right;
         width: 70%;
     }
-    @media screen and (max-width:992px) {
+    @media screen and (min-width: 992px) { /*para Computador+*/
         body {
             background-image: linear-gradient(#7c5ece, #4ea8de);
         }
         section#login {
             width: 950px;
+            height: 350px;
         }
         section#login > div#imagem {
             float: right;
@@ -40,6 +42,7 @@
         }
         div#formulario > p {
             font-size: 1.2em;
+            margin: 20px 0px;
         }
         
     }
