--- a/estilo/style.css
+++ b/estilo/style.css
@@ -18,6 +18,7 @@ black e white;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    outline: none; /*tirar borda na hora de digitar*/
 }
 
 body, html {
@@ -66,12 +67,32 @@ div#formulario > p {
 div.campo > label {
     display: none;
 }
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    border: 0px;
+}
+div.campo > input:focus-within {
+    background-color: white;
+}
+div.campo > input {
+    background-color: rgb(187, 255, 232);
+    font-size: 1em;
+    width: calc(100% - 52px);
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
 form > div.campo {
     background-color: #420068;
+    border: 2px solid #420068;
     width: 100%;
     height: 40px;
     display: block;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 .entrar {
